# leto

./: .gitignore  Cargo.toml  README.md  build.rs  leto.entitlements  package.json  pnpm-lock.yaml  webpack.config.js
.github/workflows/: release.yaml
docs/images/: README.md
icons/: icon.icns
macos/: leto.entitlements
scripts/: OSX_draggable.js  README.md  Test.js  finished_loading.js  index.js  internal.js  links_clickable.js  post.js  pre.js  zoom.js
scripts/postInject/: OSX_draggable.js  csp.js  finished_loading.js  index.js  intro.js  proxy.js  zoom.js
scripts/preInject/: index.js  init.js  proxy.js  sentry.js
scripts/shared/: ipc.js  logger.js
src/: ipc.rs  lib.rs  main.rs  microphone.rs  rpc.rs  scripts.rs  window.rs
src/injection/: client_mods.rs  inject.rs  mod.rs  scripts.rs  shared.rs
src/ipc/: callbacks.rs
