[package]
name = "leto"
version = "0.2.2"
edition = "2024"

[dependencies]
muda = "0.17.1"
open = "5.3.2"
serde = "1.0.219"
serde_json = "1.0.142"
tao = "0.34.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
wry = {version = "0.53.3", features = ["devtools"]}
rsrpc = { git = "https://www.github.com/SpikeHD/rsRPC", tag = "v0.24.2" }
reqwest = { version = "0.12.23", features = ["json", "blocking"] }
cpal = "0.16.0"
anyhow = "1.0.99"

[package.metadata.bundle]
name = "leto" # The display name of your app
identifier = "io.github.penguinify.leto" # A unique identifier, reverse-DNS is standard
icon = ["icons/icon.icns"] # Path to your app icon(s). .icns for macOS.
resources = ["scripts"] # IMPORTANT: List of directories/files to copy into the bundle.
osx_minimum_system_version = "10.13"
short_description = "discord wrapper written in rust"
copyright = "Licensed under the GPL-3.0"

[profile.dev]
debug = true
debug-assertions = true

[profile.release]
debug = false
debug-assertions = false
